Apply suggestions from code review
Co-authored-by: Alberto Tessarotto <78902914+albertotessarotto@users.noreply.github.com>

--- a/docs/release-notes/v13.6.0.md
+++ b/docs/release-notes/v13.6.0.md
@@ -15,13 +15,12 @@ Console SaaS users can try out v13.6.0 latest improvements in Preview! Open a Se
 For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
 :::
 
-## 
-
 ## Console
 
 ### Improvements
 
 #### `mlp`
+
 A new version of the Mia-Platform CLI, `mlp`, `v2.0.0` is available! It comes with the following new features:
 
 * 
@@ -148,7 +147,8 @@ The applications _AI RAG Chat_ have been updated with a couple of minor fixes on
 
 - the backend service is now called `rag-chatbot-api` and it is available as a Mia-Platform _plugin_, making it more easier to install and manage
 - at application startup, the embeddings collection is automatically created if it does not exist
-- the API to generate embeddings from file now supports markdown files with exntension `.mdx`
+- the API to generate embeddings from file now supports markdown files with extension `.mdx`
+
 
 > NOTE
 >
