--- a/docs/release-notes/v13.6.0.md
+++ b/docs/release-notes/v13.6.0.md
@@ -143,7 +143,7 @@ To know more about how to manage inheritance of custom properties, give a look a
 
 #### AI RAG Chat
 
-The applications _AI RAG Chat_ have been updated with a couple of minor fixes on the backend service:
+The application _AI RAG Chat_ has been updated with a couple of minor fixes on the backend service:
 
 - the backend service is now called `rag-chatbot-api` and it is available as a Mia-Platform _plugin_, making it more easier to install and manage
 - at application startup, the embeddings collection is automatically created if it does not exist
