--- a/docs/release-notes/v13.6.0.md
+++ b/docs/release-notes/v13.6.0.md
@@ -102,7 +102,7 @@ For more information check out the service [changelog](/runtime_suite/single-vie
 
 ## Data Catalog
 
-Data Catalog Application have been updated with new features and small improvements.
+Data Catalog Application has been updated with new features and small improvements.
 
 ### New Features
 
