added backkit rn

--- a/docs/release-notes/v13.6.0.md
+++ b/docs/release-notes/v13.6.0.md
@@ -127,11 +127,15 @@ To know more about how to manage inheritance of custom properties, give a look a
 
 ## Microfrontend Composer
 
+The new version `v1.5.15` of the back-kit library is available!
+
+Refer to back-kit [changelog](/microfrontend-composer/back-kit/changelog.md) for finer-grained details of new versions.
+
 ### Back-Kit Library
 
 #### Bug Fix
 
-*
+- Fixed escaping of char `&` in `editor` and `html-editor` format.
 
 ## Marketplace
 
