added shapes and notes feature

--- a/docs/release-notes/v13.6.0.md
+++ b/docs/release-notes/v13.6.0.md
@@ -25,6 +25,10 @@ A new version of the Mia-Platform CLI, `mlp`, `v2.0.0` is available! It comes wi
 
 * 
 
+#### New Shapes and Notes features in Flow Manager Configurator
+
+You can now add and customize shapes and notes on the canvas. Create, resize, name, and change the color of shapes, and add notes with customizable content and colors directly from the canvas.
+
 ### Bug Fix
 
 This version addressed the following bugs:
