added deprecated items

--- a/docs/release-notes/v13.6.0.md
+++ b/docs/release-notes/v13.6.0.md
@@ -166,6 +166,60 @@ The application _AI RAG Chat_ has been updated with a couple of minor fixes on t
 
 We have released a new application, called _AI RAG Chat Template_: it is identical to _AI RAG Chat_, but the backend service is available as a Mia-Platform _template_: when installed, the source code (available on [GitHub](https://github.com/mia-platform/ai-rag-template)) will be forked in a new repository to allow you complete customization.
 
+#### Deprecated Items
+
+Starting from the release of v.13.6.0 of the Console, the following items will be marked as "Deprecated". They will reach end-of-life in the upcoming release of v.14. Please take note of the changes.
+
+We recommend checking if you are using any of the deprecated items in your projects. No further development will occur for these items, including new versions or bug fixes. If alternatives are available, we suggest migrating to those to ensure continued support and functionality.
+
+| Item Name | Type |
+|-----------|------|
+| Cpp Oatpp Hello World | Example |
+| Go Call CRUD Example | Example |
+| GraphQL-Custom-Plugin-Example | Example |
+| Helidon Hello World | Example |
+| Kafka2Rest Example | Example |
+| Node.js Call CRUD Example | Example |
+| Node.js Custom Plugin with Mongo Example | Example |
+| OpenAI Playground | Example |
+| Python Falcon Hello World | Example |
+| Python Tornado Hello World | Example |
+| Rest2Kafka Example | Example |
+| Rust Hello World | Example |
+| Slack Webhook Example | Example |
+| Springboot Decorator Example | Example |
+| TypeScript Hello World Example | Example |
+| Vapor Hello World Example | Example |
+| Angular 10 Template | Template |
+| Data Catalog Agent | Template |
+| Go Echo Template | Template |
+| micro-lc Angular 12 Template | Template |
+| micro-lc Angular 13 Template | Template |
+| Node.js Daemon Template | Template |
+| React Template | Template |
+| TypeScript React Template | Template |
+| ACL Service | Plugin |
+| ANIA Service Client | Plugin |
+| Cron Scheduler | Plugin |
+| CSV Connector Plugin | Plugin |
+| Doctor Service | Plugin |
+| Google Proxy FHIR Service | Plugin |
+| Integration Tests Service | Plugin |
+| IP Geolocation Service | Plugin |
+| Mongo2Kafka | Plugin |
+| MongoDB Reader | Plugin |
+| Pharma Ecommerce Backend | Plugin |
+| Single View Creator | Plugin |
+| SQL DB Reader | Plugin |
+| SQL Invoker | Plugin |
+| Temporary Password Generator | Plugin |
+| Token Service | Plugin |
+| CSV Connector | Application |
+| Drools and Kie Server | Application |
+| File Bucket | Application |
+| Insurance CRUD Data Model | Application |
+| Secure API Gateway | Application |
+
 ## How to update your Console
 
 For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `x.x.x`.
