--- a/docs/release-notes/v13.6.0.md
+++ b/docs/release-notes/v13.6.0.md
@@ -157,7 +157,6 @@ The application _AI RAG Chat_ has been updated with a couple of minor fixes on t
 - at application startup, the embeddings collection is automatically created if it does not exist
 - the API to generate embeddings from file now supports markdown files with extension `.mdx`
 
-
 > NOTE
 >
 > The `rag-chatbot-api` plugin is available as a standalone plugin in the _Marketplace_.
@@ -168,7 +167,7 @@ We have released a new application, called _AI RAG Chat Template_: it is identic
 
 #### Deprecated Items
 
-Starting from the release of v.13.6.0 of the Console, the following items will be marked as `Deprecated`. They will reach end-of-life in the upcoming release of v.14. Please take note of the changes.
+Starting from the release of v.13.6.0 of the Console, the following items will be marked as `Deprecated`. They will reach end-of-life in the upcoming Major release of v14. Please take note of the changes.
 
 We recommend checking if you are using any of the deprecated items in your projects. No further development will occur for these items, including new versions or bug fixes. If alternatives are available, we suggest migrating to those to ensure continued support and functionality.
 
