--- a/docs/release-notes/v13.6.0.md
+++ b/docs/release-notes/v13.6.0.md
@@ -19,6 +19,13 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 
 ### Improvements
 
+#### GitHub App as new authentication type
+
+It is now possible to use GitHub Apps as an authentication method for connecting to GitHub type providers in Console.
+You will only need to configure the provider by selecting the respective credential type and the respective information to be able to use them as an authentication method fpor the provider.
+
+For more information, visit the [documentation page](/console/company-configuration/providers/management.md#supported-credential-types).
+
 #### `mlp`
 
 A new version of the Mia-Platform CLI, `mlp`, `v2.0.0` is available! It comes with the following new features:
