--- a/docs/release-notes/v13.6.0.md
+++ b/docs/release-notes/v13.6.0.md
@@ -22,7 +22,8 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 #### GitHub App as new authentication type
 
 It is now possible to use GitHub Apps as an authentication method for connecting to GitHub type providers in Console.
-You will only need to configure the provider by selecting the respective credential type and the respective information to be able to use them as an authentication method fpor the provider.
+You will only need to configure the provider by selecting the respective credential type and the respective information to be able to use them as an authentication method for the provider.
+
 
 For more information, visit the [documentation page](/console/company-configuration/providers/management.md#supported-credential-types).
 
