--- a/docs/release-notes/v13.6.0.md
+++ b/docs/release-notes/v13.6.0.md
@@ -31,7 +31,9 @@ For more information, visit the [documentation page](/console/company-configurat
 
 A new version of the Mia-Platform CLI, `mlp`, `v2.0.0` is available! It comes with the following new features:
 
-* 
+* use configmap instead of secret as inventory storage with an improved algorithm for reducing errors during reconciliation loop
+* now the deployment process is kept on waiting that all the resources are correctly applied
+* rewrite of the cli for resolving several edge cases bugs
 
 #### New Shapes and Notes features in Flow Manager Configurator
 
