--- a/docs/release-notes/v13.6.0.md
+++ b/docs/release-notes/v13.6.0.md
@@ -27,6 +27,10 @@ You will only need to configure the provider by selecting the respective credent
 
 For more information, visit the [documentation page](/console/company-configuration/providers/management.md#supported-credential-types).
 
+#### New Shapes and Notes features in Flow Manager Configurator
+
+You can now add and customize shapes and notes on the canvas. Create, resize, name, and change the color of shapes, and add notes with customizable content and colors directly from the canvas.
+
 #### `mlp`
 
 A new version of the Mia-Platform CLI, `mlp`, `v2.0.0` is available! It comes with the following new features:
@@ -35,9 +39,12 @@ A new version of the Mia-Platform CLI, `mlp`, `v2.0.0` is available! It comes wi
 * now the deployment process is kept on waiting that all the resources are correctly applied
 * rewrite of the cli for resolving several edge cases bugs
 
-#### New Shapes and Notes features in Flow Manager Configurator
+#### `miactl`
 
-You can now add and customize shapes and notes on the canvas. Create, resize, name, and change the color of shapes, and add notes with customizable content and colors directly from the canvas.
+A new version of `miactl`, `v0.17.0` is available! It comes with the following new features:
+
+* update deploy trigger command to handle deployment pipeline failure
+* project import command
 
 ### Bug Fix
 
@@ -152,10 +159,6 @@ Refer to back-kit [changelog](/microfrontend-composer/back-kit/changelog.md) for
 - Fixed escaping of char `&` in `editor` and `html-editor` format.
 
 ## Marketplace
-
-### New Marketplace Components
-
-#### 
 
 ### Marketplace Updates
 
