--- a/docs/release-notes/v13.6.0.md
+++ b/docs/release-notes/v13.6.0.md
@@ -25,7 +25,8 @@ It is now possible to use GitHub Apps as an authentication method for connecting
 You will only need to configure the provider by selecting the respective credential type and the respective information to be able to use them as an authentication method for the provider.
 
 
-For more information, visit the [documentation page](/console/company-configuration/providers/management.md#supported-credential-types).
+For more information, visit the [documentation page](/console/company-configuration/providers/configure-provider.mdx#supported-credential-types).
+
 
 #### New Shapes and Notes features in Flow Manager Configurator
 
