--- a/docs/release-notes/v13.6.0.md
+++ b/docs/release-notes/v13.6.0.md
@@ -237,9 +237,9 @@ The application _AI RAG Chat_ has been updated with a couple of minor fixes on t
 - at application startup, the embeddings collection is automatically created if it does not exist
 - the API to generate embeddings from file now supports markdown files with extension `.mdx`
 
-> NOTE
->
-> The `rag-chatbot-api` plugin is available as a standalone plugin in the _Marketplace_.
+:::note
+The `rag-chatbot-api` plugin is available as a standalone plugin in the _Marketplace_.
+:::
 
 #### AI RAG Chat Template
 
