--- a/docs/release-notes/v13.6.0.md
+++ b/docs/release-notes/v13.6.0.md
@@ -20,15 +20,23 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 
 Starting from the release of v.13.6.0 of the Console, the following items will be marked as `Deprecated`. They will reach end-of-life in the upcoming Major release of v14. Please take note of the changes.
 
-We recommend checking if you are using any of the deprecated items in your projects. No further development will occur for these items, including new versions or bug fixes. If alternatives are available, we suggest migrating to those to ensure continued support and functionality.
+We recommend checking if you are using any of the deprecated items in your projects. No further development will occur for these items, including new versions or bug fixes. If alternatives are available, we suggest migrating to those to ensure continued support and functionality.  
 
-<details>
-  <summary>Click to expand the deprecated items table</summary>
-  
-  | Item Name | Type |
-  |-----------|------|
+<details
+  style={{
+    backgroundColor: "rgba(255, 243, 205, 0.3)",
+    borderLeft: "4px solid #ffeeba",
+    border: "2px solid #ffeeba",
+    padding: "10px",
+    borderRadius: "5px",
+  }}
+>
+  <summary><strong>Click to expand the deprecated items table</strong></summary>
+
+  | Item Name             | Type    |
+  |-----------------------|---------|
   | Cpp Oatpp Hello World | Example |
-  | Go Call CRUD Example | Example |
+  | Go Call CRUD Example  | Example |
   | GraphQL-Custom-Plugin-Example | Example |
   | Helidon Hello World | Example |
   | Kafka2Rest Example | Example |
@@ -71,8 +79,8 @@ We recommend checking if you are using any of the deprecated items in your proje
   | Drools and Kie Server | Application |
   | File Bucket | Application |
   | Insurance CRUD Data Model | Application |
-  | Secure API Gateway | Application |
-  
+  | Secure API Gateway | Application |  
+
 </details>
 
 #### Version N/A Deprecated
