--- a/docs/release-notes/v13.6.0.md
+++ b/docs/release-notes/v13.6.0.md
@@ -106,6 +106,10 @@ For more information, visit the [documentation page](/console/company-configurat
 
 You can now add and customize shapes and notes on the canvas. Create, resize, name, and change the color of shapes, and add notes with customizable content and colors directly from the canvas.
 
+#### Import from Kubernetes
+
+You can now import a Kubernetes namespace into an existing Console project using miactl. This makes it seamless to onboard pre-existing workloads without needing to recreate them from scratch.
+
 #### `mlp`
 
 A new version of the Mia-Platform CLI, `mlp`, `v2.0.0` is available! It comes with the following new features:
