added import kubernetes via miactl feature

--- a/docs/release-notes/v13.6.0.md
+++ b/docs/release-notes/v13.6.0.md
@@ -91,6 +91,14 @@ Please make sure to update the items you are utilizing to this new version to en
 
 ## Console
 
+## Kubernetes Import via miactl
+
+Seamlessly onboard pre-existing Kubernetes workloads into your Console Projects using the new `miactl project import` command!  
+
+This feature simplifies the integration of Kubernetes resources by allowing you to import YAML definitions directly into an empty Project. While some advanced configurations may require manual adjustments, this process accelerates migration and saves time by avoiding the need to recreate resources from scratch.
+
+For more details, check the [miactl commands documentation](/cli/miactl/30_commands.md).
+
 ### Improvements
 
 #### GitHub App as new authentication type
@@ -101,14 +109,9 @@ You will only need to configure the provider by selecting the respective credent
 
 For more information, visit the [documentation page](/console/company-configuration/providers/configure-provider.mdx#supported-credential-types).
 
-
 #### New Shapes and Notes features in Flow Manager Configurator
 
 You can now add and customize shapes and notes on the canvas. Create, resize, name, and change the color of shapes, and add notes with customizable content and colors directly from the canvas.
-
-#### Import from Kubernetes via miactl
-
-You can now import a Kubernetes namespace into an existing Console project using miactl. This makes it seamless to onboard pre-existing workloads without needing to recreate them from scratch.
 
 #### `mlp`
 
