--- a/docs/release-notes/v13.6.0.md
+++ b/docs/release-notes/v13.6.0.md
@@ -5,15 +5,7 @@ sidebar_label: v13.6.0
 image: "img/release-note-link-preview.png"
 ---
 
-_February 6th, 2025_
-
-:::info
-Mia-Platform Console v13.6.0 is **now in Preview** and will be generally available on February 20th.
-
-Console SaaS users can try out v13.6.0 latest improvements in Preview! Open a Service Request to ask for the creation of a sandbox Company in case you do not have access to any Company.
-
-For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
-:::
+_February 20th, 2025_
 
 :::caution
 #### Deprecated Items
@@ -262,4 +254,4 @@ We have released a new application, called _AI RAG Chat Template_: it is identic
 
 ## How to update your Console
 
-For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v13.10.0-beta.3`.
+For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v13.10.0`.
