--- a/docs/release-notes/v13.6.1.md
+++ b/docs/release-notes/v13.6.1.md
@@ -17,7 +17,11 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 
 ### Improvements
 
-#### 
+#### Custom label selector support for Projects import
+
+We added support for custom labels and selectors when performing a Kubernetes workload import into your Project from existing files.
+
+To discover more about the import feature, head to the [miactl commands documentation](/cli/miactl/commands#import.md).
 
 ### Bug Fix
 
