--- a/docs/release-notes/v13.6.1.md
+++ b/docs/release-notes/v13.6.1.md
@@ -17,9 +17,9 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 
 ### Improvements
 
-#### Custom Labels and Selectors support for Project import 
+#### Custom label selector support for Projects import 
 
-We added support for custom Kubernetes Labels and Selectors when performing a workload import into your Project from existing files.
+We added support for custom label selectors when performing a Kubernetes workload import into your Project from existing files.
 
 To discover more about the import feature, head to the [miactl commands documentation](/cli/miactl/commands.md).
 
