--- a/docs/release-notes/v13.6.1.md
+++ b/docs/release-notes/v13.6.1.md
@@ -21,7 +21,8 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 
 We added support for custom label selectors when performing a Kubernetes workload import into your Project from existing files.
 
-To discover more about the import feature, head to the [miactl commands documentation](/cli/miactl/commands.md).
+To discover more about the import feature, head to the [miactl commands documentation](/cli/miactl/30_commands.md).
+
 
 ### Bug Fix
 
@@ -35,9 +36,15 @@ This version addressed the following bugs:
 
 ### Fast Data Services
 
-#### 
+#### Real Time Updater
 
-## Data Catalog
+The new version `v7.11.1` of the _Real Time Updater_ is available!
+
+##### Fixed
+
+-`kafka-importer-lib` to `v7.10.2`: Previously, when the operations were not executed in order, some strategies were inadvertently skipped. Now, the behavior has been fixed, allowing that only the strategies that should be skipped are actually excluded from execution.  
+
+For more information check out the service [changelog](/runtime_suite/real-time-updater/changelog.md).
 
 ## Microfrontend Composer
 
