--- a/docs/release-notes/v13.6.1.md
+++ b/docs/release-notes/v13.6.1.md
@@ -17,6 +17,10 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 
 ### Improvements
 
+#### Auto-generated form in Infrastructure Resource Creation
+
+For Marketplace resources with configured JSON schemas, the corresponding creation process within the Design area offers an auto-generated form. This form facilitates the input of all required properties, each accompanied by a user-oriented description.
+
 #### Custom label selector support for Projects import 
 
 We added support for custom label selectors when performing a Kubernetes workload import into your Project from existing files.
