--- a/docs/release-notes/v13.6.1.md
+++ b/docs/release-notes/v13.6.1.md
@@ -21,7 +21,7 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 
 For Marketplace resources with configured JSON schemas, the corresponding creation process within the Design area offers an auto-generated form. This form facilitates the input of all required properties, each accompanied by a user-oriented description.
 
-To discover more, go to the [documentation](/to-do).
+To discover more about the feature and the limitations, go to the [respective documentation](/to-do).
 
 #### Custom label selector support for Projects import 
 
