--- a/docs/release-notes/v13.6.1.md
+++ b/docs/release-notes/v13.6.1.md
@@ -19,7 +19,7 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 
 #### Auto-generated form in Infrastructure Resource Creation
 
-For Marketplace resources with configured JSON schemas, the corresponding creation process within the Design area offers an auto-generated form. This form facilitates the input of all required properties, each accompanied by a user-oriented description.
+For Marketplace Infrastructure Resources with configured JSON schemas, the creation process within the Design area offers an auto-generated form. This form facilitates the input of all required properties, each accompanied by a user-oriented description.
 
 To discover more about the feature and the limitations, go to the [respective documentation](/to-do).
 
@@ -28,7 +28,6 @@ To discover more about the feature and the limitations, go to the [respective do
 We added support for custom label selectors when performing a Kubernetes workload import into your Project from existing files.
 
 To discover more about the import feature, head to the [miactl commands documentation](/cli/miactl/30_commands.md).
-
 
 ### Bug Fix
 
