--- a/docs/release-notes/v13.6.1.md
+++ b/docs/release-notes/v13.6.1.md
@@ -21,7 +21,7 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 
 For Marketplace Infrastructure Resources with configured JSON schemas, the creation process within the Design area offers an auto-generated form. This form facilitates the input of all required properties, each accompanied by a user-oriented description.
 
-To discover more about the feature and the limitations, go to the [respective documentation](/to-do).
+To discover more about this feature, go to the [respective documentation](/to-do).
 
 #### Custom label selector support for Projects import 
 
@@ -30,8 +30,6 @@ We added support for custom label selectors when performing a Kubernetes workloa
 To discover more about the import feature, head to the [miactl commands documentation](/cli/miactl/30_commands.md).
 
 ## Fast Data
-
-### Fast Data Runtime Management
 
 ### Fast Data Services
 
