--- a/docs/release-notes/v13.2.0.md
+++ b/docs/release-notes/v13.2.0.md
@@ -34,7 +34,7 @@ This means that when selecting a versioned resource from the Marketplace, users 
 We believe that this new approach to managing Marketplace resources will bring significant benefits, especially when using a feature-branch design workflow.  
 If you want to discover more about the potentiality of Marketplace resource versioning and how it works, head to the [dedicated section](/software-catalog/manage-items/overview.md#set-controlled-versions-for-your-marketplace-resources-and-make-them-available-to-users) inside the [Company Marketplace](/software-catalog/manage-items/overview.md) documentation page.
 
-Visit also the [Plugins](/software-catalog/manage-items/mia-ctl/create/create-item-by-type/create_plugin.md) and [Custom Resources](/software-catalog/manage-items/mia-ctl/create/create-item-by-type/create_infrastructure_resource.md) documentations for more information about how to correctly create and manage them.
+Visit also the [Plugins](/software-catalog/manage-items/mia-ctl/create/create-item-by-type/create_plugin.md) and [Custom Resources](/software-catalog/manage-items/mia-ctl/create/create-item-by-type/create_infrastructure_resource.mdx) documentations for more information about how to correctly create and manage them.
 
 ### See the original Marketplace item in your instantiated resource and the option to Detach it
 
